flux/apps/homelab/services/public-test/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.kubernetes.io/hostname: public-test.wallstreet30.cc
    external-dns.kubernetes.io/target: wallstreet30.cc
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: public-test.wallstreet30.cc
      tls:
        certificateRefs:
          - name: public-test-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-test
  namespace: services
spec:
  hostnames:
    - public-test.wallstreet30.cc
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: public-test
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
